--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <br>
 <br>
-        <button id="calculate" onclick="test()"> Calculate </button> 
+        <button onclick="test()" id="calculate"> Calculate </button> 
         <div id="tip">
             
         </div>
